// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OAuthForm should bypass reconnect button when updating an account 1`] = `
<div>
  <div
    class="TwakeTheme--light-normal u-dc"
  />
</div>
`;

exports[`OAuthForm should handle oauth cancelation 1`] = `
<div>
  <div
    class="TwakeTheme--light-normal u-dc"
  >
    <div
      class="styles__Infos___tpCYh styles__Infos--danger___1HWww u-mb-1"
    >
      <div
        class="styles__Stack--m___1tSpV"
      >
        <div
          class="styles__Infos-description___3q8sW"
        >
          <div
            class="styles__Stack--xs___2R5lW"
          >
            <h6
              class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom"
            >
              Canceled
            </h6>
            <div
              class="MuiTypography-root MuiTypography-body1"
            >
              <span
                class="u-db u-mv-0"
              >
                We could not add your bank since you canceled the connection. Click "Add your bank" one more time to try again.
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="styles__c-card___YgP7B u-flex u-flex-wrap"
    >
      <div
        class="styles__c-empty___3w5oV"
      >
        CloudSync2
        <h3
          class="MuiTypography-root MuiTypography-h3 MuiTypography-colorTextPrimary MuiTypography-gutterBottom"
        >
          oauth.connect.title
        </h3>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-gutterBottom"
        >
          oauth.connect.description
        </p>
        <div
          class="styles__c-empty-text___3HnvR"
        />
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained customColor-primary customSize-default u-mh-auto MuiButton-containedPrimary MuiButton-disableElevation Mui-disabled Mui-disabled"
        disabled=""
        tabindex="-1"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          oauth.connect.submit
          <span
            class="MuiButton-endIcon MuiButton-iconSizeMedium"
          >
            <svg
              aria-busy="true"
              aria-hidden="true"
              class="styles__icon___23x3R styles__icon--spin___ybfC1"
              focusable="false"
              height="16"
              role="progressbar"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M8 16a7.74 7.74 0 01-3.1-.63 8.114 8.114 0 01-2.55-1.72A8.115 8.115 0 01.63 11.1 7.74 7.74 0 010 8c0-1.107.21-2.143.63-3.11a8.146 8.146 0 011.72-2.54A8.114 8.114 0 014.9.63 7.74 7.74 0 018 0c.227 0 .417.077.57.23.153.153.23.343.23.57a.774.774 0 01-.23.57.774.774 0 01-.57.23c-1.773 0-3.283.623-4.53 1.87C2.223 4.717 1.6 6.227 1.6 8c0 1.773.623 3.283 1.87 4.53C4.717 13.777 6.227 14.4 8 14.4c1.773 0 3.283-.623 4.53-1.87C13.777 11.283 14.4 9.773 14.4 8c0-.227.077-.417.23-.57a.774.774 0 01.57-.23c.227 0 .417.077.57.23.153.153.23.343.23.57a7.74 7.74 0 01-.63 3.1 8.115 8.115 0 01-1.72 2.55 8.146 8.146 0 01-2.54 1.72A7.72 7.72 0 018 16z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`OAuthForm should handle oauth cancelation 2`] = `
<div>
  <div
    class="TwakeTheme--light-normal u-dc"
  >
    <div
      class="styles__Infos___tpCYh styles__Infos--danger___1HWww u-mb-1"
    >
      <div
        class="styles__Stack--m___1tSpV"
      >
        <div
          class="styles__Infos-description___3q8sW"
        >
          <div
            class="styles__Stack--xs___2R5lW"
          >
            <h6
              class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom"
            >
              Canceled
            </h6>
            <div
              class="MuiTypography-root MuiTypography-body1"
            >
              <span
                class="u-db u-mv-0"
              >
                We could not add your bank since you canceled the connection. Click "Add your bank" one more time to try again.
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="styles__c-card___YgP7B u-flex u-flex-wrap"
    >
      <div
        class="styles__c-empty___3w5oV"
      >
        CloudSync2
        <h3
          class="MuiTypography-root MuiTypography-h3 MuiTypography-colorTextPrimary MuiTypography-gutterBottom"
        >
          oauth.connect.title
        </h3>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-gutterBottom"
        >
          oauth.connect.description
        </p>
        <div
          class="styles__c-empty-text___3HnvR"
        />
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained customColor-primary customSize-default u-mh-auto MuiButton-containedPrimary MuiButton-disableElevation"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          oauth.connect.submit
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`OAuthForm should render 1`] = `
<div>
  <div
    class="TwakeTheme--light-normal u-dc"
  >
    <div
      class="styles__c-card___YgP7B u-flex u-flex-wrap"
    >
      <div
        class="styles__c-empty___3w5oV"
      >
        CloudSync2
        <h3
          class="MuiTypography-root MuiTypography-h3 MuiTypography-colorTextPrimary MuiTypography-gutterBottom"
        >
          oauth.connect.title
        </h3>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-colorTextSecondary MuiTypography-gutterBottom"
        >
          oauth.connect.description
        </p>
        <div
          class="styles__c-empty-text___3HnvR"
        />
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained customColor-primary customSize-default u-mh-auto MuiButton-containedPrimary MuiButton-disableElevation"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          oauth.connect.submit
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;
